--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -45,6 +45,7 @@
 <link rel="import" href="coder/challenge/register-wizard/challenge-register-step.html">
 <link rel="import" href="coder/challenge/register-wizard/challenge-register-wizard-nav.html">
 <link rel="import" href="coder/challenge/register-wizard/challenge-register-wizard.html">
+<link rel="import" href="coder/challenge/register-wizard/challenge-team-invitation-modal.html">
 
 <link rel="import" href="coder/challenge/page/ccc/ccc-nav.html">
 <link rel="import" href="coder/challenge/page/ccc/nav-level-element.html">
