fix missing method call

--- a/app/elements/coder/challenge/register-wizard/challenge-register-step.html
+++ b/app/elements/coder/challenge/register-wizard/challenge-register-step.html
@@ -142,7 +142,7 @@
 			},
 			_onResponse: function(){
 				if(!this.emails || this.emails.length === 0){
-					return this._onInvitationResponse();
+					return this._redirectToInfoPage();
 				}
 				this.$.participationInvitationRequest.body = {
 					userId: this.user.id,
