--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -95,6 +95,7 @@
 <link rel="import" href="common/data-providers/challenge/invitation/invitations-by-challenge-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/location/locations-by-challenge-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/participation/participants-by-challenge-canonical-name-provider.html"/>
+<link rel="import" href="common/data-providers/challenge/participation/participation-invitation-by-key-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/template/challenge-templates-for-active-organization-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/template/challenge-template-by-challenge-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/template/challenge-template-by-id-provider.html"/>
